# branchlab

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  index.browser.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-site.yml  release.yml
docs/: redesign-open-ends.md
docs/design/: run-preview.md
scripts/: release.sh
src/: App.css  App.tsx  index.css  main.browser.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  commands.rs  config.rs  env.rs  git.rs  lib.rs  logx.rs  main.rs  opencode.rs  path.rs  project.rs  run.rs  server.rs  supervisor.rs  telemetry.rs  watcher.rs
src-tauri/src/chat/: assembler.rs  commands.rs  events.rs  manager.rs  mod.rs  model.rs  store.rs
src-tauri/src/engine/: acp.rs  mod.rs  opencode_http.rs
src-tauri/src/github/: account.rs  auth.rs  client.rs  commands.rs  events.rs  login.rs  mod.rs  model.rs
src-website/: README.md  build.mjs  index.html  main.js  package-lock.json  package.json  screenshots.mjs  styles.css
src-website/deploy/: Dockerfile  nginx.conf
src/components/: ActiveTodoStrip.tsx  Chat.tsx  ChatMessage.tsx  CommitButton.tsx  Composer.tsx  ConfigSelect.tsx  ContextRing.tsx  CreateFromPrModal.tsx  CreatePrDialog.tsx  DiffBody.tsx  FleetDashboard.tsx  Logo.tsx  ModeSelector.tsx  ModelSelector.tsx  NewWorkspaceModal.tsx  NewWorktreeModal.tsx  Onboarding.tsx  OpencodeStatus.tsx  PermissionView.tsx  PreferencesProvider.tsx  ProjectSettingsDialog.tsx  QuestionView.tsx  SettingsDialog.tsx  Sidebar.tsx  SlashCommandPalette.tsx  StatusBar.tsx  ThemeProvider.tsx  ThinkingSelector.tsx  TodoButton.tsx  WorkspaceView.tsx
src/components/center/: ChangesView.tsx  ConfigView.tsx  FileView.tsx
src/components/github/: AccountAvatar.tsx  CiIcon.tsx
src/components/home/: HomeComposer.tsx  HomeScreen.tsx  ReviewInbox.tsx
src/components/layout/: ChangesPanel.tsx  Titlebar.tsx
src/components/session/: PrPipeline.tsx  RunPanel.tsx  ServerToolsPanel.tsx  SessionView.tsx
src/components/settings/: AccountsTab.tsx  AddAccountDialog.tsx  SettingsScreen.tsx
src/components/shell/: SessionsSidebar.tsx
src/components/ui/: dialog.tsx  dropdown-menu.tsx  empty-state.tsx  field.tsx  input-group.tsx  input.tsx  label.tsx  popover.tsx  scroll-area.tsx  section-label.tsx  segmented.tsx  switch.tsx  tab-bar.tsx  textarea.tsx
src/hooks/: useAppRouter.ts  useCancellableEffect.ts  useChat.ts  useClipboardImages.ts  useCommands.ts  useDesktopBehaviors.ts  useGitHub.tsx  useInterval.ts  usePrPipeline.ts  useShortcuts.ts  useTodos.ts  useUpdateChecker.ts  useUpdateChecker.tsx  useWorkspaceData.tsx
src/lib/: api.mock.ts  api.ts  chatDisplay.ts  diff.test.ts  diff.ts  events.mock.ts  events.ts  links.ts  models.ts  opencode.mock.ts  opencode.ts  review.ts  slash.test.ts  slash.ts  status.ts  themes.ts  tree.test.ts  tree.ts  types.test.ts  types.ts  utils.ts
