[package]
name = "branchlab"
version = "0.1.0"
description = "BranchLab — an OpenCode driver"
authors = ["Mark Mooibroek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "branchlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"
# HTTP/SSE client for talking to each workspace's OpenCode server from Rust.
# default-features = false drops TLS (OpenCode servers are plain HTTP on
# localhost), avoiding an openssl/native-tls build dependency.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
# Tauri bundles tokio; we depend on it directly only for `time::sleep` in the
# supervisor's async reconcile loop.
tokio = { version = "1", features = ["time"] }
# Filesystem watching for git state (replaces frontend diff-stat/changes polling).
notify = "6"
notify-debouncer-full = "0.3"

