[package]
name = "branchlab"
version = "0.1.1"
description = "BranchLab — an OpenCode driver"
authors = ["Mark Mooibroek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "branchlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8"
# Thin HTTP client for the *supplemental* `opencode serve` (active workspace
# only) that backs the MCP/LSP status panel — ACP doesn't expose runtime tool
# status. rustls-tls is for the telemetry client (analytics endpoint is HTTPS).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Tauri bundles tokio; we use it for the supervisor's reconcile loop and the
# chat engine's async command loop (channels, select, task spawning).
tokio = { version = "1", features = ["time", "rt", "macros", "sync"] }
# Filesystem watching for git state (replaces frontend diff-stat/changes polling).
notify = "6"
notify-debouncer-full = "0.3"
# Persistent chat cache — a BranchLab-owned SQLite store, independent of the
# OpenCode engine, so the transcript survives restarts and engine session
# compaction/clear. `bundled` compiles SQLite in-tree (no system libsqlite dep).
rusqlite = { version = "0.32", features = ["bundled"] }
# Stable, sortable ids for conversations/entries/blocks (monotonic ULIDs).
ulid = "1"
# ACP (Agent Client Protocol) client — the engine transport. Pinned exactly:
# the crate's high-level API is still evolving, and all its types are isolated
# behind `crate::engine::acp` so an upgrade touches only that module.
agent-client-protocol = "=1.0.1"
# GitHub API client (REST + GraphQL). Brings its own rustls-backed reqwest, so
# it can reach api.github.com / GHE — the bare `reqwest` above is localhost-only.
# One `Octocrab` per account (token from `gh auth token`) gives clean isolation.
octocrab = "0.53.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

